update action file

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,19 +9,13 @@ jobs:
     steps:
     - uses: actions/checkout@v3
       with:
-        repository: gaoyb7/rclone
-        ref: feat-115-drive
+        repository: guowanghushifu/rclone
+        ref: master
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.20.2
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
+        go-version: 1.21
 
     - name: Get current date
       id: date
@@ -42,24 +36,3 @@ jobs:
         token: ${{ secrets.GITHUB_TOKEN }}
         files: dist/*.tar.gz
 
-    - name: Dockerhub Release
-      run: |
-        docker push gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-amd64
-        docker push gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-i386
-        docker push gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-arm64v8
-        docker push gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-armv7
-        docker push gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-armv6
-        docker manifest create gaoyb7/rclone:v1_${{ steps.date.outputs.date }} \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-amd64 \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-i386 \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-arm64v8 \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-armv7 \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-armv6
-        docker manifest create gaoyb7/rclone:latest \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-amd64 \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-i386 \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-arm64v8 \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-armv7 \
-            --amend gaoyb7/rclone:v1_${{ steps.date.outputs.date }}-armv6
-        docker manifest push gaoyb7/rclone:v1_${{ steps.date.outputs.date }}
-        docker manifest push gaoyb7/rclone:latest
