--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: guowanghushifu/rclone
-        ref: master
+        ref: multi-thread
 
     - name: Set up Go
       uses: actions/setup-go@v3
